# ConTP

./: README.md  pyproject.toml  requirements.txt
model/: ConTP_data_module.py
script/: debug.ipynb  predict.ipynb  predict_ood.ipynb
utils/bio/: align_utils.py
utils/config/: config_utils.py
utils/dataset/: ProteinDataset.py  Tokenizer.py  __init__.py
utils/file/: __init__.py  path_utils.py  read_utils.py  write_utils.py
utils/lightning/: __init__.py
utils/parallel/: parallel_utils.py
utils/tool/: dict_utils.py
utils/wrapper/ESM/: __init__.py
